--- a/22.Generate-Parentheses.md
+++ b/22.Generate-Parentheses.md
@@ -1,30 +1,20 @@
-## 题目地址
-https://leetcode.com/problems/lru-cache/description/
+## Link to the problem 
+https://leetcode.com/problems/generate-parentheses/
 
-## 题目描述
+## Problem description
 
 ```
-Design and implement a data structure for Least Recently Used (LRU) cache. It should support the following operations: get and put.
+Given n pairs of parentheses, write a function to generate all combinations of well-formed parentheses.
 
-get(key) - Get the value (will always be positive) of the key if the key exists in the cache, otherwise return -1.
-put(key, value) - Set or insert the value if the key is not already present. When the cache reached its capacity, it should invalidate the least recently used item before inserting a new item.
+For example, given n = 3, a solution set is:
 
-Follow up:
-Could you do both operations in O(1) time complexity?
-
-Example:
-
-LRUCache cache = new LRUCache( 2 /* capacity */ );
-
-cache.put(1, 1);
-cache.put(2, 2);
-cache.get(1);       // returns 1
-cache.put(3, 3);    // evicts key 2
-cache.get(2);       // returns -1 (not found)
-cache.put(4, 4);    // evicts key 1
-cache.get(1);       // returns -1 (not found)
-cache.get(3);       // returns 3
-cache.get(4);       // returns 4
+[
+  "((()))",
+  "(()())",
+  "(())()",
+  "()(())",
+  "()()()"
+]
 
 ```
 
