--- a/22.Generate-Parentheses.md
+++ b/22.Generate-Parentheses.md
@@ -18,23 +18,15 @@ For example, given n = 3, a solution set is:
 
 ```
 
-## 思路
-
-由于是保留是最近使用的N条数据，这就和队列的特性很符合， 先进入队列的，先出队列。
-
-因此思路就是用一个队列来记录目前缓存的所有key， 每次push都进行判断，如果
-超出最大容量限制则进行清除缓存的操作， 具体清除谁就按照刚才说的队列方式进行处理，同时对key进行入队操作。
-
-get的时候，如果缓存中有，则调整队列（具体操作为删除指定元素和入队两个操作）。 缓存中没有则返回-1
-
-## 关键点解析
-
-- 队列简化操作
-
-- 队列的操作是这道题的灵魂， 很容易少考虑情况
+## Ideas
 
 
-## 代码
+
+## Key Point Analysis
+
+
+
+## Code
 
 ```js
 /*
