added more description

--- a/Backtracking/22.Generate-Parentheses.md
+++ b/Backtracking/22.Generate-Parentheses.md
@@ -1,7 +1,7 @@
-## Link to the problem 
+## Link To The Problem 
 https://leetcode.com/problems/generate-parentheses/
 
-## Problem description
+## Problem Description
 
 ```
 Given n pairs of parentheses, write a function to generate all combinations of well-formed parentheses.
@@ -134,4 +134,11 @@ LRUCache.prototype.put = function(key, value) {
  */
 
 
+```
+## Related Topics
+```
+String
+```
+```
+Backtracking
 ```
