--- a/Backtracking/22.Generate-Parentheses.md
+++ b/Backtracking/22.Generate-Parentheses.md
@@ -136,9 +136,8 @@ LRUCache.prototype.put = function(key, value) {
 
 ```
 ## Related Topics
-```
-String
-```
-```
-Backtracking
-```
+```String``` ```Backtracking```
+
+
+
+
