--- a/Backtracking/22.Generate-Parentheses.md
+++ b/Backtracking/22.Generate-Parentheses.md
@@ -20,120 +20,38 @@ For example, given n = 3, a solution set is:
 
 ## Ideas
 
+Instead of adding '(' or ')' every time as in Approach 1, let's only add them when we know it will remain a valid sequence. 
+We can do this by keeping track of the number of opening and closing brackets we have placed so far.
 
+We can start an opening bracket if we still have one (of n) left to place. And we can start a closing bracket if it would not 
+exceed the number of opening brackets.
 
-## Key Point Analysis
+## Algorithm Analysis
 
-
+1) Store left and right count as numbers of left or right parenthesises
+2) Only append the output string to the list if it reaches 2 * N complexity
+3) Set leftbound < N and rightbound < leftbound
 
 ## Code
 
 ```js
-/*
- * @lc app=leetcode id=146 lang=javascript
- *
- * [146] LRU Cache
- *
- * https://leetcode.com/problems/lru-cache/description/
- *
- * algorithms
- * Hard (24.17%)
- * Total Accepted:    272.8K
- * Total Submissions: 1.1M
- * Testcase Example:  '["LRUCache","put","put","get","put","get","put","get","get","get"]\n[[2],[1,1],[2,2],[1],[3,3],[2],[4,4],[1],[3],[4]]'
- *
- * 
- * Design and implement a data structure for Least Recently Used (LRU) cache.
- * It should support the following operations: get and put.
- * 
- * 
- * 
- * get(key) - Get the value (will always be positive) of the key if the key
- * exists in the cache, otherwise return -1.
- * put(key, value) - Set or insert the value if the key is not already present.
- * When the cache reached its capacity, it should invalidate the least recently
- * used item before inserting a new item.
- * 
- * 
- * Follow up:
- * Could you do both operations in O(1) time complexity?
- * 
- * Example:
- * 
- * LRUCache cache = new LRUCache( 2 );
- * 
- * cache.put(1, 1);
- * cache.put(2, 2);
- * cache.get(1);       // returns 1
- * cache.put(3, 3);    // evicts key 2
- * cache.get(2);       // returns -1 (not found)
- * cache.put(4, 4);    // evicts key 1
- * cache.get(1);       // returns -1 (not found)
- * cache.get(3);       // returns 3
- * cache.get(4);       // returns 4
- * 
- * 
- */
-/**
- * @param {number} capacity
- */
-var LRUCache = function(capacity) {
-    this.cache = {};
-    this.capacity = capacity;
-    this.size = 0;
-    this.queue = [];
-};
+def generateParenthesis(self, N):
+        output = []
+        def backtrack(output_string, left, right):
+            if len(output_string) == 2 * N:
+                output.append(output_string)
+                return
+            if left < N:
+                backtrack(output_string + '(', left + 1, right)
+            if right < left: # we only append if there are enough '('s
+                backtrack(output_string + ')', left, right + 1)  
+        backtrack('', 0, 0)
+        return output
+```
 
-/** 
- * @param {number} key
- * @return {number}
- */
-LRUCache.prototype.get = function(key) {
-    const hit = this.cache[key];
-
-    if (hit !== undefined) {
-        this.queue = this.queue.filter(q => q !== key);
-        this.queue.push(key);
-        return hit;
-    }
-    return -1;
-};
-
-/** 
- * @param {number} key 
- * @param {number} value
- * @return {void}
- */
-LRUCache.prototype.put = function(key, value) {
-    const hit = this.cache[key];
-
-    // update cache
-    this.cache[key] = value;
-
-    if (!hit) {
-        // invalid cache and resize size;
-        if (this.size === this.capacity) {
-            // invalid cache
-            const key = this.queue.shift();
-            this.cache[key] = undefined;
-        } else {
-            this.size = this.size + 1;
-        }
-        this.queue.push(key);
-    } else {
-        this.queue = this.queue.filter(q => q !== key);
-        this.queue.push(key);
-    }
-};
-
-/** 
- * Your LRUCache object will be instantiated and called as such:
- * var obj = new LRUCache(capacity)
- * var param_1 = obj.get(key)
- * obj.put(key,value)
- */
-
-
+## Complexity Analysis
+```
+This analysis out of the scope 
 ```
 ## Related Topics
 ```String``` ```Backtracking```
