added another problem to leetcode

--- a/Backtracking/46.Permutations.md
+++ b/Backtracking/46.Permutations.md
@@ -1,30 +1,29 @@
 ## Link To The Problem 
-https://leetcode.com/problems/generate-parentheses/
+https://leetcode.com/problems/permutations/
 
 ## Problem Description
 
 ```
-Given n pairs of parentheses, write a function to generate all combinations of well-formed parentheses.
+Given a collection of distinct integers, return all possible permutations.
 
-For example, given n = 3, a solution set is:
+Example:
 
+Input: [1,2,3]
+Output:
 [
-  "((()))",
-  "(()())",
-  "(())()",
-  "()(())",
-  "()()()"
+  [1,2,3],
+  [1,3,2],
+  [2,1,3],
+  [2,3,1],
+  [3,1,2],
+  [3,2,1]
 ]
 
 ```
 
 ## Ideas
 
-Instead of adding '(' or ')' every time as in Approach 1, let's only add them when we know it will remain a valid sequence. 
-We can do this by keeping track of the number of opening and closing brackets we have placed so far.
 
-We can start an opening bracket if we still have one (of n) left to place. And we can start a closing bracket if it would not 
-exceed the number of opening brackets.
 
 ## Algorithm Analysis
 
