finished another summary

--- a/Backtracking/46.Permutations.md
+++ b/Backtracking/46.Permutations.md
@@ -23,29 +23,58 @@ Output:
 
 ## Ideas
 
-
+Backtracking is an algorithm for finding all solutions by exploring all potential candidates. 
+If the solution candidate turns to be not a solution (or at least not the last one), backtracking 
+algorithm discards it by making some changes on the previous step, i.e. backtracks and then try again.
 
 ## Algorithm Analysis
-
-1) Store left and right count as numbers of left or right parenthesises
-2) Only append the output string to the list if it reaches 2 * N complexity
-3) Set leftbound < N and rightbound < leftbound
+This is a generic algorithm to solve backtracking problem
+```py
+def permute(self, nums):
+        """
+        :type nums: List[int]
+        :rtype: List[List[int]]
+        """
+        output = []
+        self.backtrack(output, [], nums)
+        # nums.sort() not necissary
+        return output
+    def backtrack(self, output, tempList, nums):
+        if len(tempList) == len(nums):
+            tempList2 = []
+            for tempElement in tempList:
+                tempList2.append(tempElement)
+            output.append(tempList2)
+        else:
+            for i in range(len(nums)):
+                if nums[i] in tempList:
+                    continue # element already exists, skip
+                tempList.append(nums[i]) 
+                self.backtrack(output, tempList, nums)
+                tempList.pop() 
+```
 
 ## Code
 
 ```py
-def generateParenthesis(self, N):
+def permute(self, nums):
+    """
+    :type nums: List[int]
+    :rtype: List[List[int]]
+    """
     output = []
-    def backtrack(output_string, left, right):
-        if len(output_string) == 2 * N:
-            output.append(output_string)
-            return
-        if left < N:
-            backtrack(output_string + '(', left + 1, right)
-        if right < left: # we only append if there are enough '('s
-            backtrack(output_string + ')', left, right + 1)  
-    backtrack('', 0, 0)
+    self.backtrack(output, [], nums])
     return output
+def backtrack(output, tempList, nums):
+    if len(tempList) == len(nums):
+        output.add(tempList)
+    else:
+        for i in range(len(nums)):
+            if nums[i] in tempList:
+                continue # element already exists, skip
+            tempList.add(nums[i]) 
+            backtrack(output, tempList, nums)
+            tempList.remove(len(tempList) - 1) 
 ```
 
 ## Complexity Analysis
