added another question

--- a/Backtracking/46.Permutations.md
+++ b/Backtracking/46.Permutations.md
@@ -37,7 +37,7 @@ def permute(self, nums):
         """
         output = []
         self.backtrack(output, [], nums)
-        # nums.sort() not necissary
+        nums.sort() 
         return output
     def backtrack(self, output, tempList, nums):
         if len(tempList) == len(nums):
@@ -63,18 +63,21 @@ def permute(self, nums):
     :rtype: List[List[int]]
     """
     output = []
-    self.backtrack(output, [], nums])
+    self.backtrack(output, [], nums)
     return output
-def backtrack(output, tempList, nums):
+def backtrack(self, output, tempList, nums):
     if len(tempList) == len(nums):
-        output.add(tempList)
+        tempList2 = []
+        for tempElement in tempList:
+            tempList2.append(tempElement)
+        output.append(tempList2)
     else:
         for i in range(len(nums)):
             if nums[i] in tempList:
                 continue # element already exists, skip
-            tempList.add(nums[i]) 
-            backtrack(output, tempList, nums)
-            tempList.remove(len(tempList) - 1) 
+            tempList.append(nums[i]) 
+            self.backtrack(output, tempList, nums)
+            tempList.pop() 
 ```
 
 ## Complexity Analysis
