optimized my code and made it better

--- a/Backtracking/46.Permutations.md
+++ b/Backtracking/46.Permutations.md
@@ -31,27 +31,24 @@ algorithm discards it by making some changes on the previous step, i.e. backtrac
 This is a generic algorithm to solve backtracking problem
 ```py
 def permute(self, nums):
-        """
-        :type nums: List[int]
-        :rtype: List[List[int]]
-        """
-        output = []
-        self.backtrack(output, [], nums)
-        nums.sort() 
-        return output
-    def backtrack(self, output, tempList, nums):
-        if len(tempList) == len(nums):
-            tempList2 = []
-            for tempElement in tempList:
-                tempList2.append(tempElement)
-            output.append(tempList2)
-        else:
-            for i in range(len(nums)):
-                if nums[i] in tempList:
-                    continue # element already exists, skip
-                tempList.append(nums[i]) 
-                self.backtrack(output, tempList, nums)
-                tempList.pop() 
+    """
+    :type nums: List[int]
+    :rtype: List[List[int]]
+    """
+    output = []
+    self.backtrack(output, [], nums)
+    nums.sort() 
+    return output
+def backtrack(self, output, tempList, nums):
+    if len(tempList) == len(nums):
+        output.append(list(tempList))
+    else:
+        for i in range(len(nums)):
+            if nums[i] in tempList:
+                continue # element already exists, skip
+            tempList.append(nums[i]) 
+            self.backtrack(output, tempList, nums)
+            tempList.pop() 
 ```
 
 ## Code
