--- a/Backtracking/78.subsets.md
+++ b/Backtracking/78.subsets.md
@@ -40,15 +40,12 @@ def subsets(self, nums):
         :rtype: List[List[int]]
         """
         output = []
-        self.backtrack(output, [], nums)
         nums.sort() 
+        self.backtrack(output, [], nums)
         return output
 def backtrack(self, output, tempList, nums):
     if len(tempList) == len(nums):
-        tempList2 = []
-        for tempElement in tempList:
-            tempList2.append(tempElement)
-        output.append(tempList2)
+        output.append(list(tempList))
     else:
         for i in range(len(nums)):
             if nums[i] in tempList:
@@ -67,18 +64,14 @@ def subsets(self, nums):
         :rtype: List[List[int]]
         """
         output = []
-        nums.sort() 
         self.backtrack(output, [], nums, 0)
         return output
 def backtrack(self, output, tempList, nums, start):
-    tempList2 = []
-    for element in tempList:
-        tempList2.append(element)
-    output.append(tempList2)
+    output.append(list(tempList))
     for i in range(start, len(nums)):
         tempList.append(nums[i]) 
         self.backtrack(output, tempList, nums, i + 1)
-        tempList.pop()  
+        tempList.pop() 
 ```
 
 ## Complexity Analysis
