modified the approach a little

--- a/Backtracking/46.Permutations.md
+++ b/Backtracking/46.Permutations.md
@@ -39,19 +39,19 @@ def permute(self, nums):
         self.backtrack(output, [], nums)
         nums.sort() 
         return output
-    def backtrack(self, output, tempList, nums):
-        if len(tempList) == len(nums):
-            tempList2 = []
-            for tempElement in tempList:
-                tempList2.append(tempElement)
-            output.append(tempList2)
-        else:
-            for i in range(len(nums)):
-                if nums[i] in tempList:
-                    continue # element already exists, skip
-                tempList.append(nums[i]) 
-                self.backtrack(output, tempList, nums)
-                tempList.pop() 
+def backtrack(self, output, tempList, nums):
+    if len(tempList) == len(nums):
+        tempList2 = [] # python uses pass in by object reference 
+        for tempElement in tempList:
+            tempList2.append(tempElement)
+        output.append(tempList2)
+    else:
+        for i in range(len(nums)):
+            if nums[i] in tempList:
+                continue # element already exists, skip
+            tempList.append(nums[i]) 
+            self.backtrack(output, tempList, nums)
+            tempList.pop() 
 ```
 
 ## Code
