--- a/Backtracking/79.word-search.md
+++ b/Backtracking/79.word-search.md
@@ -47,9 +47,16 @@ def backtrack(candidate):
 
 Specifically the approach to solve this problem:
 
-Step 1). At the beginning, first we check if we reach the bottom case of the recursion, where the word to be matched is empty, i.e. we have already found the match for each prefix of the word.
-Step 2). We then check if the current state is invalid, either the position of the cell is out of the boundary of the board or the letter in the current cell does not match with the first letter of the word.
-Step 3). If the current step is valid, we then start the exploration of backtracking with the strategy of DFS. First, we mark the current cell as visited, e.g. any non-alphabetic letter will do. Then we iterate through the four possible directions, namely up, right, down and left. The order of the directions can be altered, to one's preference.
+Step 1). At the beginning, first we check if we reach the bottom case of the recursion, where the word to be matched is empty, 
+i.e. we have already found the match for each prefix of the word.
+
+Step 2). We then check if the current state is invalid, either the position of the cell is out of the boundary of the board 
+or the letter in the current cell does not match with the first letter of the word.
+
+Step 3). If the current step is valid, we then start the exploration of backtracking with the strategy of DFS. 
+First, we mark the current cell as visited, e.g. any non-alphabetic letter will do. Then we iterate through the four 
+possible directions, namely up, right, down and left. The order of the directions can be altered, to one's preference.
+
 Step 4). At the end of the exploration, we revert the cell back to its original state. Finally we return the result of the exploration.
 
 ## Code
