updated the max product subarray problem

--- a/Dynamic-programming/152. Maximum-Product-Subarray.md
+++ b/Dynamic-programming/152. Maximum-Product-Subarray.md
@@ -21,33 +21,69 @@ Explanation: The result cannot be 2, because [-2,-1] is not a subarray.
 
 ## Ideas
 
-At each sub program, we keep track of the maximum positive value and 
+At each sub program, we keep track of the max positive value and max negative value.
 
 ## Algorithm Analysis
+Intuition: 
+Step 1) store maxPos and maxNeg array for each position i
+step 2) at each subproblem i, the value of maxPos[i] will be the MAX(0, maxPos[i-1] * nums[i], maxNeg[i-1] * nums[i], nums[i])
+step 2) at each subproblem i, the value of maxNeg[i] will be the MIN(0, maxNeg[i-1] * nums[i], maxPos[i-1] * nums[i], nums[i])
 
-This is a generic algorithm to solve backtracking problem
+This will be O(n) time complexity and O(n) space complexity.
 ```py
-def subsets(self, nums):
+class Solution(object):
+    def maxProduct(self, nums):
         """
         :type nums: List[int]
-        :rtype: List[List[int]]
+        :rtype: int
         """
-        output = []
-        nums.sort() 
-        self.backtrack(output, [], nums)
-        return output
-def backtrack(self, output, tempList, nums):
-    if len(tempList) == len(nums):
-        output.append(list(tempList))
-    else:
-        for i in range(len(nums)):
-            if nums[i] in tempList:
-                continue # element already exists, skip
-            tempList.append(nums[i]) 
-            self.backtrack(output, tempList, nums)
-            tempList.pop() 
+        if len(nums) == 0:
+            return 0
+        if len(nums) == 1:
+            return nums[0]
+        maxPos = [0] * len(nums)
+        maxNeg = [0] * len(nums)
+        
+        maxPos[0] = max(nums[0], 0)
+        maxNeg[0] = min(nums[0], 0)
+        
+        for i in range(1, len(nums)):
+            maxPos[i] = max(0, maxPos[i-1] * nums[i], maxNeg[i-1] * nums[i], nums[i])
+            maxNeg[i] = min(0, maxNeg[i-1] * nums[i], maxPos[i-1] * nums[i], nums[i])
+        return max(maxPos)
 ```
+```py
+    def maxProduct(self, nums):
+        """
+        :type nums: List[int]
+        :rtype: int
+        """
+        if (len(nums) == 0):
+            return 0
+        if (len(nums) == 1):
+            return nums[0]
+        localMaxPre = nums[0]
+        localMinPre= nums[0]
+        localMax = -sys.maxint - 1
+        localMin = sys.maxint
+        globalMax = nums[0]
+        for i in range(1, len(nums)):
+            localMax = max(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+            localMin = min(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+            globalMax = max(globalMax, localMax)
+            localMaxPre = localMax
+            localMinPre = localMin
+        return globalMax
+```
+Optimization:
+1) Store the global max variable as globalMax
+2) store the local max and local min variables as localMax and localMin
+3) store the previous local max and local min variables as localMaxPre and localMinPre
 
+4) at each subproblem i, localMax = MAX(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+5) at each subproblem i, localMin = MIN(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+6) at each subproblem, update globalmax = MAX(globalmax, localMax)
+7) at the enb of each subproblem, set the localmaxpre and localminpre to be localmax and localmin
 ## Code
 
 ```py
@@ -71,15 +107,16 @@ class Solution(object):
             maxPos[i] = max(0, maxPos[i-1] * nums[i], maxNeg[i-1] * nums[i], nums[i])
             maxNeg[i] = min(0, maxNeg[i-1] * nums[i], maxPos[i-1] * nums[i], nums[i])
         return max(maxPos)
-        
 ```
 
 ## Complexity Analysis
 ```
-This analysis out of the scope
+Time complexity: O(n)
+
+Space complexity: O(1)
 ```
 ## Related Topics
-```String``` ```Backtracking```
+```dynamic programming```
 
 
 
