--- a/Dynamic-programming/152. Maximum-Product-Subarray.md
+++ b/Dynamic-programming/152. Maximum-Product-Subarray.md
@@ -26,8 +26,12 @@ At each sub program, we keep track of the max positive value and max negative va
 ## Algorithm Analysis
 Intuition: 
 Step 1) store maxPos and maxNeg array for each position i
-step 2) at each subproblem i, the value of maxPos[i] will be the MAX(0, maxPos[i-1] * nums[i], maxNeg[i-1] * nums[i], nums[i])
-step 2) at each subproblem i, the value of maxNeg[i] will be the MIN(0, maxNeg[i-1] * nums[i], maxPos[i-1] * nums[i], nums[i])
+
+step 2) at each subproblem i, the value of maxPos[i] will be  
+MAX(0, maxPos[i-1] * nums[i], maxNeg[i-1] * nums[i], nums[i])
+
+step 3) at each subproblem i, the value of maxNeg[i] will be 
+MIN(0, maxNeg[i-1] * nums[i], maxPos[i-1] * nums[i], nums[i])
 
 This will be O(n) time complexity and O(n) space complexity.
 ```py
