--- a/Dynamic-programming/152. Maximum-Product-Subarray.md
+++ b/Dynamic-programming/152. Maximum-Product-Subarray.md
@@ -56,6 +56,16 @@ class Solution(object):
             maxNeg[i] = min(0, maxNeg[i-1] * nums[i], maxPos[i-1] * nums[i], nums[i])
         return max(maxPos)
 ```
+
+Optimization:
+1) Store the global max variable as globalMax
+2) store the local max and local min variables as localMax and localMin
+3) store the previous local max and local min variables as localMaxPre and localMinPre
+
+4) at each subproblem i, localMax = MAX(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+5) at each subproblem i, localMin = MIN(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+6) at each subproblem, update globalmax = MAX(globalmax, localMax)
+7) at the enb of each subproblem, set the localmaxpre and localminpre to be localmax and localmin
 ```py
     def maxProduct(self, nums):
         """
@@ -79,15 +89,7 @@ class Solution(object):
             localMinPre = localMin
         return globalMax
 ```
-Optimization:
-1) Store the global max variable as globalMax
-2) store the local max and local min variables as localMax and localMin
-3) store the previous local max and local min variables as localMaxPre and localMinPre
 
-4) at each subproblem i, localMax = MAX(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
-5) at each subproblem i, localMin = MIN(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
-6) at each subproblem, update globalmax = MAX(globalmax, localMax)
-7) at the enb of each subproblem, set the localmaxpre and localminpre to be localmax and localmin
 ## Code
 
 ```py
@@ -97,20 +99,22 @@ class Solution(object):
         :type nums: List[int]
         :rtype: int
         """
-        if len(nums) == 0:
+        if (len(nums) == 0):
             return 0
-        if len(nums) == 1:
+        if (len(nums) == 1):
             return nums[0]
-        maxPos = [0] * len(nums)
-        maxNeg = [0] * len(nums)
-        
-        maxPos[0] = max(nums[0], 0)
-        maxNeg[0] = min(nums[0], 0)
-        
+        localMaxPre = nums[0]
+        localMinPre= nums[0]
+        localMax = -sys.maxint - 1
+        localMin = sys.maxint
+        globalMax = nums[0]
         for i in range(1, len(nums)):
-            maxPos[i] = max(0, maxPos[i-1] * nums[i], maxNeg[i-1] * nums[i], nums[i])
-            maxNeg[i] = min(0, maxNeg[i-1] * nums[i], maxPos[i-1] * nums[i], nums[i])
-        return max(maxPos)
+            localMax = max(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+            localMin = min(localMaxPre * nums[i], localMinPre * nums[i], nums[i])
+            globalMax = max(globalMax, localMax)
+            localMaxPre = localMax
+            localMinPre = localMin
+        return globalMax
 ```
 
 ## Complexity Analysis
