--- a/Backtracking/22.Generate-Parentheses.md
+++ b/Backtracking/22.Generate-Parentheses.md
@@ -54,7 +54,7 @@ def generateParenthesis(self, N):
 This analysis out of the scope
 ```
 ## Related Topics
-```String``` ```Backtracking```
+```String``` ```Backtracking``` ```medium```
 
 
 
