--- a/Backtracking/46.Permutations.md
+++ b/Backtracking/46.Permutations.md
@@ -82,7 +82,7 @@ def backtrack(self, output, tempList, nums):
 This analysis out of the scope
 ```
 ## Related Topics
-```String``` ```Backtracking```
+```String``` ```Backtracking``` ```medium```
 
 
 
