--- a/Backtracking/78.subsets.md
+++ b/Backtracking/78.subsets.md
@@ -79,7 +79,7 @@ def backtrack(self, output, tempList, nums, start):
 This analysis out of the scope
 ```
 ## Related Topics
-```String``` ```Backtracking```
+```String``` ```Backtracking``` ```medium```
 
 
 
