--- a/Backtracking/79.word-search.md
+++ b/Backtracking/79.word-search.md
@@ -95,7 +95,7 @@ class Solution(object):
 This analysis out of the scope
 ```
 ## Related Topics
-```String``` ```Backtracking```
+```String``` ```Backtracking``` ```medium```
 
 
 
