--- a/Dynamic-programming/152. Maximum-Product-Subarray.md
+++ b/Dynamic-programming/152. Maximum-Product-Subarray.md
@@ -124,7 +124,7 @@ Time complexity: O(n)
 Space complexity: O(1)
 ```
 ## Related Topics
-```dynamic programming```
+```dynamic programming``` ```medium```
 
 
 
