--- a/Dynamic-programming/410. Split-Array-Largest-Sum.md
+++ b/Dynamic-programming/410. Split-Array-Largest-Sum.md
@@ -28,46 +28,56 @@ where the largest sum among the two subarrays is only 18.
 ```
 
 ## Ideas
-
-
-
+```
+The idea is to use DP to store the best cut at each subproblem i.
+```
 ## Algorithm Analysis
+```
+Let's think about the function:
+f[i][j], where 
+i is the subarray bounded by 0,..,n (row value),
+j is the number of cuts bounded by 0,..,m (col value),
+k is the index to split the subarray (row value)
 
+Essentially, at each iteration of the subproblem, we are taking the max 
+of the each side, f[k][j - 1], sumArr[i] - sumArr[k].
+For each k, we want to store the minimum value of f[i][j].
+
+Therefore, we have:
+f[i][j] = Math.min(f[i][j], Math.max(f[k][j - 1], sumArr[i] - sumArr[k]));
+```
 
 ## Code
-```java
-class Solution {
-    public int splitArray(int[] nums, int m) {
-        int n = nums.length;
-        int[][] f = new int[n + 1][m + 1];
-        int[] sub = new int[n + 1];
-        for (int i = 0; i <= n; i++) {
-            for (int j = 0; j <= m; j++) {
-                f[i][j] = Integer.MAX_VALUE;
-            }
-        }
-        for (int i = 0; i < n; i++) {
-            sub[i + 1] = sub[i] + nums[i];   
-        }
+```py
+class Solution(object):
+    def splitArray(self, nums, m):
+        """
+        :type nums: List[int]
+        :type m: int
+        :rtype: int
+        """
+        n = len(nums)
+        # f = [[sys.maxint] * (m + 1)] * (n + 1) # shallow copy
+        f = [[sys.maxint for i in range(m + 1)] for j in range(n + 1)] 
+        f[0][0] = 0
+        print(f)
+        sumArr = [0] * (len(nums) + 1)
+        for i in range(n):
+            sumArr[i + 1] = sumArr[i] + nums[i]
+        print(sumArr)
+        for i in range(1, n + 1):
+            for j in range(1, m + 1):
+                for k in range(i):
+                    f[i][j] = min(f[i][j], max(f[k][j-1], sumArr[i] - sumArr[k]))
+        return f[n][m]
         
-        f[0][0] = 0;
-        for (int i = 1; i <= n; i++) {
-            for (int j = 1; j <= m; j++) {
-                for (int k = 0; k < i; k++) {
-                    f[i][j] = Math.min(f[i][j], Math.max(f[k][j - 1], sub[i] - sub[k]));
-                }
-            }
-        }
-        System.out.println(Arrays.deepToString(f));
-        return f[n][m];        
-    }
-}
-```java
+```
 ## Complexity Analysis
 ```
 Time complexity: 
-
+O(n) = n^2 * m
 Space complexity: 
+O(n) = n^2 
 ```
 ## Related Topics
 ```dynamic programming``` ```hard```
