--- a/Array-and-strings/11.Container-With-Most-Water.md
+++ b/Array-and-strings/11.Container-With-Most-Water.md
@@ -10,55 +10,50 @@ Note: You may not slant the container and n is at least 2.
 The above vertical lines are represented by array [1,8,6,2,5,4,8,3,7]. In this case, the max area of water (blue section) the container can contain is 49.
 ## Ideas
 ```
-
+1) The area is affected by the distance and shorter height of the two points
+2) We want to design an algorithm that takes these two factors
 ```
 ## Algorithm Analysis
 ```
-Let's think about the function:
-f[i][j], where 
-i is the subarray bounded by 0,..,n (row value),
-j is the number of cuts bounded by 0,..,m (col value),
-k is the index to split the subarray (row value)
+Step 1) set up start and end pointers at each ends
+Step 2) move the shorter line inward at each iteration and recompute area
 
-Essentially, at each iteration of the subproblem, we are taking the max 
-of the each side, f[k][j - 1], sumArr[i] - sumArr[k].
-For each k, we want to store the minimum value of f[i][j].
+This can be thought of:
+if f[start] <= f[end]
+    start = start + 1
+    update area
+else:
+    end = end - 1
+    update area
 
-Therefore, we have:
-f[i][j] = Math.min(f[i][j], Math.max(f[k][j - 1], sumArr[i] - sumArr[k]));
+where f[i] represents the height of the array
 ```
 
 ## Code
 ```py
 class Solution(object):
-    def splitArray(self, nums, m):
+    def maxArea(self, height):
         """
-        :type nums: List[int]
-        :type m: int
+        :type height: List[int]
         :rtype: int
         """
-        n = len(nums)
-        # f = [[sys.maxint] * (m + 1)] * (n + 1) # shallow copy
-        f = [[sys.maxint for i in range(m + 1)] for j in range(n + 1)] 
-        f[0][0] = 0
-        print(f)
-        sumArr = [0] * (len(nums) + 1)
-        for i in range(n):
-            sumArr[i + 1] = sumArr[i] + nums[i]
-        print(sumArr)
-        for i in range(1, n + 1):
-            for j in range(1, m + 1):
-                for k in range(i):
-                    f[i][j] = min(f[i][j], max(f[k][j-1], sumArr[i] - sumArr[k]))
-        return f[n][m]
+        start, end = 0, len(height) - 1
+        area = 0
+        while start != end:
+            area = max(area, min(height[start], height[end]) * (end - start))
+            if (height[start] <= height[end]):
+                start += 1
+            else:
+                end -=1
+        return area
         
 ```
 ## Complexity Analysis
 ```
 Time complexity: 
-O(n) = n^2 * m
+O(n)
 Space complexity: 
-O(n) = n^2 
+O(1) 
 ```
 ## Related Topics
 ```dynamic programming``` ```hard```
