--- a/Array-and-strings/727.Minimum-Window-Subsequence.md
+++ b/Array-and-strings/727.Minimum-Window-Subsequence.md
@@ -82,7 +82,13 @@ class Solution(object):
         return "" if ans[0] == float("inf") else s[ans[1] : ans[2] + 1]
 ```
 ## Complexity Analysis
+time complexity:
 
+O(N + T)
+
+Space complexity:
+
+O(N + T)
 ## Related Topics
 ```array and strings``` ```hard```
 
